@startuml
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 60
skinparam ranksep 60
hide empty members

' Keep the most-shared abstractions visually at the top
top to bottom direction

skinparam class {
BackgroundColor<<OpenHAB>> HoneyDew
BackgroundColor<<SuplaCloud>> Cornsilk
BackgroundColor<<SuplaServer>> MistyRose
BackgroundColor<<SuplaHandler>> Motivation
BackgroundColor<<SuplaCommon>> GreenYellow
}

' Anchor heavily used OpenHAB and Supla abstractions on the top rank
interface ThingHandler <<OpenHAB>>
interface BridgeHandler <<OpenHAB>>
abstract class BaseThingHandler <<OpenHAB>>
abstract class BaseBridgeHandler <<OpenHAB>>

abstract class SuplaDevice <<SuplaCommon>>
abstract class ServerSuplaDeviceHandler <<SuplaServer>>
abstract class SuplaBridge <<SuplaCommon>>

interface HandleCommand <<SuplaServer>>
interface ServerDevice <<SuplaServer>>
interface ServerBridge <<SuplaServer>>

class GatewayDeviceHandler <<SuplaHandler>>
class SingleDeviceHandler <<SuplaHandler>>
class SubDeviceHandler <<SuplaHandler>>
class ServerBridgeHandler <<SuplaHandler>>

class CloudBridgeHandler <<SuplaCloud>>
class CloudDeviceHandler <<SuplaCloud>>

' OpenHAB core relationships
ThingHandler <|.. BaseThingHandler
ThingHandler <|-- BridgeHandler
BridgeHandler <|.. BaseBridgeHandler

' Supla Common
BaseBridgeHandler <|-- SuplaBridge

' Device handler relationships
BaseThingHandler <|-- SuplaDevice
SuplaDevice <|-- ServerSuplaDeviceHandler
SuplaDevice <|-- SubDeviceHandler
SuplaDevice <|-- CloudDeviceHandler
ServerSuplaDeviceHandler <|-- GatewayDeviceHandler
ServerSuplaDeviceHandler <|-- SingleDeviceHandler

' Supla trait implementations (device side)
HandleCommand <|.. SuplaDevice
HandleCommand <|-- ServerDevice
ServerDevice <|.. SubDeviceHandler
ServerDevice <|.. ServerSuplaDeviceHandler

' Bridge handler relationships
SuplaBridge <|-- CloudBridgeHandler
SuplaBridge <|-- ServerBridgeHandler
BridgeHandler <|-- ServerBridge
ServerBridge <|.. GatewayDeviceHandler
ServerBridge <|.. ServerBridgeHandler
@enduml
